Fix code-box overflow

--- a/resources/css/default.scss
+++ b/resources/css/default.scss
@@ -402,17 +402,21 @@ CONTENT
 .code-box-content {
   word-break: break-all;
   font-size: 1em;
+  font-family: monospace;
   line-height: 1.10;
   padding: 0.5em 1em;
   display: block;
   min-height: 1em;
   height: 100%;
   white-space: pre-wrap;
-  font-family: monospace;
 
   &::selection {
     color: black;
     background: $light-yellow;
+  }
+
+  pre {
+    white-space: pre-wrap;
   }
 }
 
